# auto-approps

./: .env.example  .env.local  .gitignore  README.md  entitlements.plist  forge.config.js  package-lock.json  package.json  tsconfig.electron.json  vite.main.config.ts
.claude/: settings.json  settings.local.json
.codex/: config.toml
.github/workflows/: cut-release.yml  release.yml
assets/: icon.icns
backend/: .env  .env.example  pyproject.toml
backend/.claude/: settings.local.json
backend/src/auto_approps/: app.py  browser_ai.py  config.py  doc_parser.py  form_scraper.py  generic_form_scraper.py  knowledge_profile_store.py  mapper.py  models.py  ms_form_scraper.py  namer.py  nav_engine.py  page_model.py  provider.py  session_store.py  settings_store.py
backend/tests/: conftest.py  test_app_knowledge_profile_routes.py  test_knowledge_profile_store.py  test_mapper_inference.py  test_mapper_profile_context.py  test_ms_form_scraper_headless.py
docs/: alpha-smoke-tests.md  hearing-intelligence-integration-plan.md
docs/golden-hearings/: README.md  dataset.json
electron/: ipc-channels.ts  ipc-handlers.ts  main.ts  pdfjs-dist.d.ts  playwright-env.ts  preload.ts
electron/services/: anthropic-client.ts  auto-updater.ts  browser-ai.ts  client-store.ts  concurrency.ts  config.ts  congressional-context.ts  (+35 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: clean-db.js  download-media-tools.js  download-playwright-browser.js  hearing-eval.js  hearing-url-e2e.ts  setup-dev.sh  start-backend.sh  start-frontend.sh
(+30 files in other folders)
