[project]
name = "auto-approps"
version = "0.1.0"
description = "Automate congressional appropriations Google Forms from Word documents"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-docx>=1.1",
    "playwright>=1.49",
    "anthropic>=0.43",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.18",
]

[project.scripts]
auto-approps = "auto_approps.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_approps"]
